# Cash-Sloth

./: BUILDING.md  CMakeLists.txt  Cash-Sloth V25.11.10 CPP.cpp  LICENSE  Makefile  README.md  cash_sloth_catalog_v25.11.json  cash_sloth_json.cpp  cash_sloth_json.h  cash_sloth_style.cpp  cash_sloth_styles_v25.11.json  cash_sloth_utils.h
.github/workflows/: .ci-build.yml  release.yml
assets/: cash_sloth_catalog.json  cash_sloth_images.json  style.json
docs/: CODE_REVIEW.md  wiki.md
include/: cash_sloth_json.h  cash_sloth_style.h  cash_sloth_utils.h
src/: cash_sloth_json.cpp  cash_sloth_style.cpp  main.cpp
